chore(docs): migrate new docs